Bug 1292701, 1366330 - Fix popup hiding while navigating file picker r=cmartin

Differential Revision: https://phabricator.services.mozilla.com/D172884